# pamde

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md
.github/workflows/: ci.yml
crates/pamde-core/: Cargo.toml
crates/pamde-core/src/: lib.rs
crates/pamde-core/src/c_api/: mod.rs
crates/pamde-core/src/metadata/: mod.rs
crates/pamde-core/src/schema/: mod.rs
py-pamde/: pyproject.toml
py-pamde/runtime/pamde-runtime/: Cargo.toml  pyproject.toml
py-pamde/runtime/pamde-runtime/_pamde_runtime/: __init__.py
py-pamde/runtime/pamde-runtime/src/: lib.rs
py-pamde/src/pamde/: __init__.py  _pyarrow_backend.py  _types.pyi  cli.py  editor.py
py-pamde/src/pamde/server/: app.py
py-pamde/src/pamde/server/routes/: metadata.py
py-pamde/tests/: fruits.parquet  test_metadata.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts
ui/src/components/: MetadataTable.tsx  UploadView.tsx
